--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
 
-
+                <configuration>
+                    <failIfNoTests>true</failIfNoTests>
+                </configuration>
 
             </plugin>
         </plugins>
